# asyncpg-recorder

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  Jenkinsfile  README.md  inbox.md  pyproject.toml  sonar-project.properties
asyncpg_recorder/: config.py  main.py  plugin.py
scripts/: release.sh
tests/: conftest.py  main.py  test_config.py  test_record.py  test_record_parametrized_fixtures.py  test_record_without_database.py  test_replay.py  test_replay.py--test_multiple_calls_with_same_cassette.cassette.json  test_replay.py--test_multiple_calls_with_same_cassette.json  test_replay.py--test_select_now.json  test_replay.py--test_select_now.pickle  test_replay.py--test_select_version.cassette.json  test_replay.py--test_select_version.json  test_replay.py--test_select_version_fetchrow.cassette.json  test_replay_vcrpy.py  test_vcr_alongside_asyncpg_recorder.vcr
tests/cassettes/: test_replay.py--test_multiple_calls_with_same_cassette.cassette.json  test_replay.py--test_select_now.cassette.pickle  test_replay.py--test_select_version_fetch.cassette.json  test_replay.py--test_select_version_fetchrow.cassette.json  test_replay_vcrpy.py--test_vcr_alongside_asyncpg_recorder.cassette.json  test_replay_vcrpy.py--test_vcr_alongside_asyncpg_recorder_2.cassette.json
tests/fixtures/: multiple_calls_with_same_cassette.pickle  now.pickle  version.json
tests/name/: test_name.py
