[project]
name = "asyncpg-recorder"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "asyncpg>=0.30.0",
    "testcontainers>=4.9.1",
]

[dependency-groups]
dev = [
    "pytest>=8.3.4",
    "pytest-asyncio>=0.25.3",
    "pytest-sugar>=1.1.1",
    "testcontainers[postgres]>=4.9.1",
]

[tool.uv]
python-preference = "system"

[tool.pytest.ini_options]
asyncio_default_fixture_loop_scope = "function"
